# system_monitor

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build.ps1
include/: ai_monitor.h  cpu_monitor.h  cpu_temp_monitor.h  disk_io_monitor.h  disk_monitor.h  gaming_session.h  gpu_benchmark.h  gpu_monitor.h  gui.h  hpc_engine.h  memory_monitor.h  nvml_monitor.h  performance_analyzer.h  performance_score.h  power_monitor.h  process_monitor.h
src/: ai_monitor.cpp  cpu_monitor.cpp  cpu_temp_monitor.cpp  disk_io_monitor.cpp  disk_monitor.cpp  gaming_session.cpp  gpu_benchmark.cpp  gpu_monitor.cpp  gui.cpp  hpc_engine.cpp  main.cpp  memory_monitor.cpp  nvml_monitor.cpp  performance_analyzer.cpp  performance_score.cpp  power_monitor.cpp  process_monitor.cpp
